--- a/main.html
+++ b/main.html
@@ -1,1 +1,11 @@
 <!-- Add your solution to this file -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Cat Photo Web App</title>
+</head>
+<body>
+  <h1>Welcome to Cat Photo Web App</h1>
+  <h2>Acciojob</h2>
+</body>
+</html>
